@@ -4,6 +4,7 @@
         =========================
 
         GWcs now supports CD keywords instead of CDELT (#1951)
+        Correct GCTAPsf2D containment radius computation (#1876)
         Add GLS and SFL WCS projections (#1851)
         GModelSpectralNodes throws exception for non-positive energy or intensity (#990)
 
